# LLM-Powered-Smart-Notes-Application

./: README.md  resume.txt
backend/: .env  README.md  main.py  pyproject.toml  requirements.txt
backend/app/: LLM_Integration.py  __init__.py  app.py  database.py  schemas.py  text_extracting.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.mts
frontend/src/: App.jsx  api.js  styles.css
